--- a/모바일페이지1.html
+++ b/모바일페이지1.html
@@ -36,6 +36,45 @@
             line-height: 27px;
             color: coral;
         }
+        #main-header ul{
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+        #main-header li{
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+
+        #main-header li.active a{
+            color: #555;
+            font-weight: 500;
+        }
+
+        #main-header label{
+            padding: 10px 5px;
+            text-align: center;
+            float: right;
+            width: 40px;
+            height: 27px;
+            line-height: 27px;
+            color: #222;
+            border: 1px solid #222;
+            border-radius: 5px;
+
+        }
+
+        #checkbox {
+            display: none;
+            
+        }
+        #checkbox + nav {
+            display: block;
+        }   
+
+        #checkbox:checked + nav {
+            display: none;
+        }   
+
     </style>
 </head>
 <body>
